PostGIS 3.4.2dev
xxxx/xx/xx
This version requires PostgreSQL 12-16, GEOS 3.6 or higher, and Proj 6.1+.
To take advantage of all features, GEOS 3.12+ is needed.
To take advantage of all SFCGAL featurs, SFCGAL 1.4.1+ is needed.

* Bug Fixes *

 - #5571, Memory over-allocation for narrow inputs (Paul Ramsey)


* Bug Fixes and Enhancments *

PostGIS 3.4.1
2023/11/19
This version requires PostgreSQL 12-16, GEOS 3.6 or higher, and Proj 6.1+.
To take advantage of all features, GEOS 3.12+ is needed.
To take advantage of all SFCGAL featurs, SFCGAL 1.4.1+ is needed.

* Bug Fixes *

 - #5541, Fix --without-gui configure switch (Chris Mayo)
 - #5558, Fix uninitialized variable in ST_AsMVTGeom (Sandro Santilli)
 - #5590, Fix script-based load of topology.sql (Sandro Santilli)
 - #5574, #5575, #5576, #5577, #5578, #5579, #5569
          Fix restore of postgis dumps since 2.1 (Sandro Santilli)
 - #5568, Improve robustness of topology face split handling (Sandro Santilli)
 - #5548, Fix box-filtered validity check of topologies with edge-less faces
          (Sandro Santilli)
 - #5485, Fix postgis script on OpenBSD (Sandro Santilli)
 - #5516, Fix upgrade with views using deprecated function, among which:
          ST_AddBand (#5509), ST_AsGeoJSON (#5523) ST_AsKML (#5524)
          ST_Aspect (#5491), ST_BandIsNoData (#5510), ST_BandMetadata (#5502),
          ST_BandNoDataValue (#5503), ST_BandPath (#5511),
          ST_BandPixelType (#5512), ST_Clip (#5488), ST_Count (#5517),
          ST_GeoReference (#5514), ST_Intersects(raster, ...) (#5489),
          ST_LineCrossingDirection (#5518)
          ST_MakeEmptyRaster (#5508), ST_MapAlgebraFCT (#5500),
          ST_Polygon(raster, ...) (#5507), ST_SetBandIsNoData (#5505),
          ST_SetBandNoDataValue (#5506), ST_SetGeoreference (#5504),
          ST_SetValue (#5519),
          ST_Slope (#5490), ST_SummaryStats (#5515), ST_TileEnvelope (#5499)
          ST_Value (#5513, #5484), toTopoGeom (#5526).
          (Sandro Santilli)