@@ -29,3 +29,8 @@ SELECT ST_asewkt(ST_SetPoint('LINESTRING(0 0 0 0, 1 1 1 1, 2 2 2 2, 4 4 4 4)', 0
 -- https://trac.osgeo.org/postgis/ticket/5319
 SELECT '#5319', ST_SetPoint('0102000020E610000005000000000000000000F07F000000000000F07F000000000000F07F000000000000F07F000000000000F07F000000000000F07F000000000000F07F000000000000F07F000000000000F07F000000000000F07F'::geometry, 1,ST_GeomFromText('POINT(0 0)',4326)  )  As result;
 
+-- https://trac.osgeo.org/postgis/ticket/5610 (NaN check)
+SELECT '#5610', ST_AsText(ST_SetPoint(
+ST_Makeline(ARRAY[ST_MakePoint(1,2,'Nan'), ST_MakePoint(3,4,10), ST_MakePoint(5,6, 20)]),
+2, ST_MakePoint(5,6, 'Nan'))) AS result;
+
