@@ -11,4 +11,5 @@ LINESTRING(0 0 0 0,1 1 1 1,2 2 2 2,90 91 0 0)
 LINESTRING(0 0 0 0,1 1 1 1,90 91 92 0,4 4 4 4)
 LINESTRING(0 0 0 0,90 91 0 92,2 2 2 2,4 4 4 4)
 LINESTRING(90 91 92 93,1 1 1 1,2 2 2 2,4 4 4 4)
-ERROR:  Geometry contains invalid coordinate
+#5319|0102000020E610000005000000000000000000F07F000000000000F07F00000000000000000000000000000000000000000000F07F000000000000F07F000000000000F07F000000000000F07F000000000000F07F000000000000F07F
+#5610|LINESTRING Z (1 2 NaN,3 4 10,5 6 NaN)
